--- a/extensions/client/pom.xml
+++ b/extensions/client/pom.xml
@@ -31,7 +31,7 @@
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>tnfs-java-client-extensions</artifactId>
-	<name>Java TNFS - Client Extensions</name>
+	<name>TNFS Java - Client Extensions</name>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
