--- a/extensions/lib/pom.xml
+++ b/extensions/lib/pom.xml
@@ -29,7 +29,7 @@
 <relativePath>../</relativePath>
 </parent>
   <artifactId>tnfs-java-lib-extensions</artifactId>
-  <name>Java TNFS - Library Extensions</name>
+  <name>TNFS Java - Library Extensions</name>
   <dependencies>
   	<dependency>
   		<groupId>${project.groupId}</groupId>
