--- a/fuse/pom.xml
+++ b/fuse/pom.xml
@@ -34,7 +34,7 @@
 		<!--<maven.compiler.release>22</maven.compiler.release>-->
 	</properties>
 	<artifactId>tnfs-java-fuse</artifactId>
-	<name>Java TNFS - FUSE</name>
+	<name>TNFS Java - FUSE</name>
 	<description>Uses FUSE to allow mounting of TNFS resource to the local file system</description>
 	<dependencies>
 		<dependency>
