--- a/it/pom.xml
+++ b/it/pom.xml
@@ -34,7 +34,7 @@
 		<!--<maven.compiler.release>22</maven.compiler.release>-->
 	</properties>
 	<artifactId>tnfs-java-it</artifactId>
-	<name>Java TNFS - Integration Tests</name>
+	<name>TNFS Java - Integration Tests</name>
 	<description>Tests the server and client, either with each other or with an external TNFS server (e.g. reference implementation).</description>
 	<dependencies>
 		<dependency>
