--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,7 +31,7 @@
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>tnfs-java-server</artifactId>
-	<name>Java TNFS - Server Library</name>
+	<name>TNFS Java - Server Library</name>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
