Ability to use LDAP for users.

--- a/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Authentication.schema.ini
+++ b/daemon/src/main/resources/uk/co/bithatch/tnfs/daemon/Authentication.schema.ini
@@ -10,3 +10,69 @@
 		from being used.
 	mulitplicity = ANY
 	type = TEXT 
+	
+; --------------------------------
+; LDAP 
+; --------------------------------
+
+[ldap]
+	name = LDAP
+	description = The LDAP authenticator must be configured before it can be  \
+		used. At minimum a hostname is required.
+
+[ldap.hostname]
+	name = Hostname
+	description = The hostname where the LDAP service running.
+	type = TEXT
+	discriminator = IP
+
+[ldap.port]
+	name = Port
+	description = The port on which the LDAP service running. When not set, the \
+		default 389 will be used unless SSL is enabled, in which case 636 will be used.
+	type = NUMBER
+
+[ldap.ssl]
+	name = SSL
+	description = Whether or not to use LDAPS (SSL) or plain LDAP.
+	type = BOOLEAN
+	default-value = false
+
+[ldap.ignore-ssl-errors]
+	name = Ignore SSL Errors
+	description = Ignore any SSL errors with certificatews.
+	type = BOOLEAN
+	default-value = false
+
+[ldap.base-dn]
+	name = Base DN
+	description = Base DN under which users are searched, e.g. `dc=example,dc=com`.
+	type = NUMBER
+	default-value = 389
+
+[ldap.bind-dn]
+	name = Bind DN
+	description = Optional bind DN for a service account used to look up users by short username. \
+         	If not set, authenticate() will treat the username as a full DN.
+	type = TEXT
+
+[ldap.bind-password]
+	name = Bind Password
+	description = If bind DN is set, a password must be provided.
+	type = TEXT
+	discriminator = SECRET
+
+[ldap.user-search-filter]
+	name = User Search Filter
+	description = """
+		 Optional search filter for resolving short usernames to a DN.
+         Use {0} as a placeholder for the escaped username. E.g.
+		
+         (uid={0})              – typical for OpenLDAP
+         (sAMAccountName={0})   – typical for Active Directory
+         """
+	type = TEXT
+	discriminator = SECRET
+	default-value = "(uid={0})"
+	
+	
