--- a/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
+++ b/sdk/src/main/nsis/configuration/tnfsjd/authentication.ini
@@ -15,3 +15,39 @@
 ; from being used.
 
 ;disable-authenticator = system 
+
+;----------------------------------------
+; LDAP Authentication
+;----------------------------------------
+
+[ldap]
+	; The hostname where the LDAP service running. Required to enable LDAP.
+	;hostname = dc1
+
+	; The port on which the LDAP service running. When not set, the \
+	; default 389 will be used unless SSL is enabled, in which case 636 will be used.
+	;port = 389
+
+	; Whether or not to use LDAPS (SSL) or plain LDAP.
+	;ssl = false
+	
+	; Ignore any SSL errors with certificatews.
+	;ignore-ssl-errors = false
+
+	; Base DN under which users are searched, e.g. `dc=example,dc=com`.
+	;base-dn = "dc=example,dc=com"
+
+	;Optional bind DN for a service account used to look up users by short username. \
+    ; If not set, authenticate() will treat the username as a full DN.
+	; bind-dn = Administrator@example.com
+	
+	;If bind DN is set, a password must be provided.
+	;bind-password = Password123?
+
+	; Optional search filter for resolving short usernames to a DN.
+    ; Use {0} as a placeholder for the escaped username. E.g.
+	;
+    ;    (uid={0})              – typical for OpenLDAP
+    ;    (sAMAccountName={0})   – typical for Active Directory
+	;user-search-filter = "(uid={0})"
+
