--- a/daemon/pom.xml
+++ b/daemon/pom.xml
@@ -45,6 +45,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>tnfs-java-server-ldap</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>tnfs-java-daemonlib</artifactId>
 			<version>${project.version}</version>
 		</dependency>
